# Facade-Interpretation

./: CMakeLists.txt  README.md  fi_config.h.in
cmake/Modules/: find_boost.cmake
cylinder_segmentation_example/: CMakeLists.txt  main.cpp
cylinder_segmentation_example/data/: table_scene_mug_stereo_textured_cylinder.pcd  table_scene_mug_stereo_textured_plane.pcd
cylinder_segmentation_example/include/: cylinder_segmentation.h
io/: CMakeLists.txt
io/include/: dlr_cam_pose_parser.h  file_io.h  mshr_3D2D_table_parser.h  mshr_cam_calib_parser.h  unibw_cam_pose_parser.h
io/src/: dlr_cam_pose_parser.cpp  file_io.cpp  mshr_3D2D_table_parser.cpp  mshr_cam_calib_parser.cpp  unibw_cam_pose_parser.cpp
linear_algebra/: CMakeLists.txt
linear_algebra/include/: plane_model.h  ransac_homography.h
linear_algebra/src/: determine_homography.cpp  model_context.cpp
model_segmentation/include/: house_model_builder.h  model_context.h  model_segmentation.h
model_segmentation/src/: house_model_builder.cpp  model_segmentation.cpp  plane_model.cpp
obj_recognition/: CMakeLists.txt
obj_recognition/include/: sliding_window.h
obj_recognition/include/.svn/: entries
obj_recognition/src/: sliding_window.cpp
obj_recognition/src/.svn/: entries
sfm/: CMakeLists.txt  main.cpp
sfm/include/: estimate_fundamental_matrix.h  feauture_matcher.h
sfm/src/: estimate_fundamental_matrix.cpp  feature_matcher.cpp  ransac_homography.cpp
vp_detection/: CMakeLists.txt
vp_detection/include/: vp_detection.h  vp_detection_cloud.h  vp_detection_context.h  vp_detection_wrapper.h
vp_detection/src/: main.cxx  vp_detection.cpp  vp_detection_cloud.cpp  vp_detection_context.cpp  vp_detection_wrapper.cpp
